[workspace]
resolver = "2"
members = [
    "eig-expr",
    "eig-domain",
    "eig-aoe",
    "mems",
    "mems/examples/ds-powerflow/ds-common",
    "mems/examples/ds-powerflow/ds-static-topo",
    "mems/examples/ds-powerflow/ds-dev-ohm-cal",
    "mems/examples/ds-powerflow/ds-dyn-topo",
    "mems/examples/ds-powerflow/ds-pf-input",
    "mems/examples/ds-powerflow/ds-3phase-pf",
    "mems/examples/ds-powerflow/ds-guizhou",
]

[workspace.package]
edition = "2021"
rust-version = "1.75.0"  # MSRV
