[package]
name = "eig-aoe"
version = "0.1.0"
authors = ["dongshufeng <dongshufeng@zju.edu.cn>"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
log = "^0.4"
async-trait = "0.1"
async-channel = "2.3"
csv = "1.3"
cron = "0.12"
rayon = "1.10"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.6"
protobuf = "3.5"
ndarray = { version = "0.15", features = ["serde"] }
num-complex = "0.4"
# this repo
eig-domain = { path = "../eig-domain"}
eig-expr = { path = "../eig-expr"}