[package]
name = "eig-aoe"
version = "0.1.0"
authors = ["dongshufeng <dongshufeng@zju.edu.cn>"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
log = "^0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.6"
protobuf = "3.7"

# this repo
eig-domain = { path = "../eig-domain"}
eig-expr = { path = "../eig-expr"}