[package]
name = "eig-domain"
version = "0.1.0"
authors = ["dongshufeng <dongshufeng@zju.edu.cn>"]
edition.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
protobuf = { version = "3.7", features = ["with-bytes"] }

# this project
eig-expr = { path = "../eig-expr" }
csv = "1.3"
calamine = "0.26"
encoding_rs = "0.8.34"


[build-dependencies]
# protobuf-codegen-pure = "2.28"
protobuf-codegen = "3.5"
protobuf = { version = "3.7", features = ["with-bytes"] }