[package]
name = "mems"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors = ["dongshufeng <dongshufeng@zju.edu.cn>"]

[dependencies]
log = "0.4"
bytes = "1.6"
byteorder = "1.5"
csv = "1.3"
protobuf = { version = "3.5", features = ["with-bytes"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
petgraph = "0.6"
rayon = "1.10"
num-traits = "0.2"
cron = "0.12"
async-channel = "2.3"
base64 = "0.22"
arrow-schema = { version = "52.1", features = ["serde"] }

# this project
eig-domain = { path = "../eig-domain" }
eig-expr = { path = "../eig-expr" }
eig-aoe = { path = "../eig-aoe" }
eig-db = { path = "../eig-db" }
