[package]
name = "mems"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors = ["dongshufeng <dongshufeng@zju.edu.cn>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
arrow-schema = { version = "55.1", features = ["serde"] }
# this project
eig-domain = { path = "../eig-domain" }
