[package]
name = "ds-dyn-topo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
serde_cbor = "0.11"
arrow-schema = { version = "52.1", features = ["serde"] }
petgraph = "0.6"
eig-domain = { path = "../../../eig-domain" }
mems = { path = "../../../mems" }
csv = "1.3.0"