[package]
name = "ds-tn-input"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
csv = "1.3.0"
ciborium = "0.2"
arrow-schema = { version = "52.1", features = ["serde"] }
ds-common = { path = "../ds-common" }
eig-domain = { path = "../../../eig-domain" }
mems = { path = "../../../mems" }
bytes = "1.6.1"