[package]
name = "iesplan"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
bytes = "1.8"
byteorder = "1.5"
serde = "1"
serde_json = "1"
serde_cbor = "0.11"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
yew = { version = "0.21", features = ["csr"] }
yew-agent = "0.2"
gloo-utils = "0.2"
gloo-file = "0.3"
getrandom = { version = "0.2", features = ["js"] }
protobuf = { version = "3.7", features = ["with-bytes"] }
csv = "1.3"
yew-bulma = { git = "https://github.com/shufengdong/yew-bulma.git" }
eig-domain = { path = "../../../eig-domain" }
# web-sys and js-sys
js-sys = "0.3"
[dependencies.web-sys]
version = "0.3"
features = ["FormData", "File"]

[profile.release]
# Tell `rustc` to optimize for small code size.
# 二进制文件会包含更少的代码
panic = 'abort'
# 对所有代码库进行优化(优化更好，构建更慢)
codegen-units = 1
# 优化大小(更加激进)
opt-level = 0
# 优化大小
# opt-level = 's'
# 对整个程序进行链接时优化(link time optimization)
lto = true

#[package.metadata.wasm-pack.profile.release]
#wasm-opt = false