[package]
name = "ds-3phase-pf"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
serde_json = "1.0"
ciborium = "0.2"
arrow-schema = { version = "53.3", features = ["serde"] }
csv = "1.3.0"
num-complex = "0.4"
ndarray = "0.16"
nalgebra = "0.33"

ds-common = { path = "../ds-common" }
eig-domain = { path = "../../../../eig-domain" }
mems = { path = "../../.." }
bytes = "1.8"