[package]
name = "ds-dev-ohm-cal"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
serde_json = "1.0"
ciborium = "0.2"
arrow-schema = { version = "53.3", features = ["serde"] }
petgraph = "0.6"
eig-domain = { path = "../../../../eig-domain" }
mems = { path = "../../.." }
csv = "1.3.0"
ndarray = "0.16"
bytes = "1.8"
