[package]
name = "ds-dyn-topo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
csv = "1.3.0"
ciborium = "0.2"
arrow-schema = { version = "54.3", features = ["serde"] }
eig-domain = { path = "../../../../eig-domain" }
mems = { path = "../../.." }
ds-common = { path = "../ds-common" }
bytes = "1.10"